# herb_launch

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  package.xml
calibration/: left_wam_joint_calibrations  right_wam_joint_calibrations
config/: apriltags.yaml  apriltags_multisense.yaml  localization.yaml  localization_global.yaml  localization_local.yaml  owd_base.yaml  owd_head.yaml  owd_left.yaml  owd_right.yaml  realsense.yaml  ros_control.yaml  ros_control_controllers.yaml  ros_control_schedule.yaml  ros_control_schedule_left.yaml  ros_control_schedule_right.yaml  schunk_controllers.yaml  segway.yaml  stargazer.yaml
launch/: _launch.robot_fixed_transforms  all.launch  apriltags.launch  apriltags_kinect.launch  apriltags_multisense.launch  can_detector.launch  chisel.launch  depth.launch  diagnostic_logging.launch  head.launch  joystick.launch  kinect2_bridge.launch  kinect2_bridge_cpu.launch  kinect_ada_bridge.launch  left_arm.launch  localization.launch  multisense.launch  navigation.launch  plane_fit.launch  pose_estimator.launch  rcnn_moped.launch  rcnn_pose.launch  realsense.launch  right_arm.launch  robot_localization.launch  rock.launch  ros_control.launch  schunk_neck.launch  segway.launch  skeleton_tracker.launch  stargazer.launch  state_publisher.launch  static_map.launch  talker.launch  transforms.launch
libbarrett_config/left_arm/: calibration.conf  calibration_old.conf  wam7w.conf
libbarrett_config/left_arm/calibration_data/wam7w/: gravitycal.conf  zerocal.conf  zerocal.conf.1
libbarrett_config/right_arm/: autotension.conf  calibration.conf  default.conf  wam7w.conf
libbarrett_config/right_arm/calibration_data/wam7w/: gravitycal.conf  gravitycal.conf.1  zerocal.conf  zerocal.conf.1  zerocal.conf.2
scripts/: 00_stop_gravity_comp.sh  01_joint_state_controller.sh  02_gravity_comp_both.sh  02_gravity_comp_left.sh  02_gravity_comp_right.sh  03_hand_controller_both.sh  03_hand_controller_left.sh  03_hand_controller_right.sh  04_force_torque_controller.sh  04_neck_controller.sh  99_stop_grav_comp_n_traj.sh  99_stop_grav_comp_n_traj_left.sh  99_stop_grav_comp_n_traj_right.sh  99_stop_traj_n_grav_comp.sh  99_stop_traj_n_grav_comp_right.sh  bhd_joint_relay.py  check_herb.sh  close_herb_all.sh  owd_joint_relay.py  remote_start_herb2.sh  start_alexa_tmux.sh  start_herb.sh  start_herb0.sh  start_herb0_tmux.sh  start_herb2.sh  start_herb2_tmux.sh  start_herb2_xfile.sh  start_herb3_c0.sh  start_herb3_c0_tmux.sh  start_herb3_c2.sh  start_herb3_c2_tmux.sh  start_herb3_cx_tmux.sh  start_herb_all.sh  start_herbx_tmux.sh  start_kinect_watchdog.sh
scripts/old/: check_herb.sh  segway_joint_relay.py  start_herb.sh  start_herb0.sh  start_herb2.sh
udev/: 99-herb.rules
